ingress/echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - host: echo1.itwnik.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.itwnik.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
