ingress/echo_ingress_ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - echo1.itwnik.com
    - echo2.itwnik.com
    secretName: letsencrypt-staging
  rules:
  - host: echo1.itwnik.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.itwnik.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
