ingress/magento2-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: magento2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - magento2.itwnik.com
    secretName: magento2-tls
  rules:
  - host: magento2.itwnik.com
    http:
      paths:
      - backend:
          serviceName: magento2-app
          servicePort: 80
